--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,53 @@
-.App {
+body{
+  background-color: antiquewhite;
+}
+
+.container{
+  display: flex;
+  justify-content: center;
+}
+
+h1{
+  color: rgb(84, 42, 42);
+  background-color: rgb(238, 193, 193);
+  width: 100%;
+  height: 80px;
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+h2{
+  color: rgb(84, 42, 42) ;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.btntwoo{
+width: 100px;
+height: 30px;
+margin: 20px;
+background-color: rgb(184, 112, 112);
+color: rgb(251, 249, 249);
+border: none;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.text{
+width: 800px;
+font-size: 13px;
 }
 
-.App-link {
-  color: #61dafb;
+.btn{
+  background-color: Transparent;
+  color: rgb(174, 43, 54);
+border: none;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+
+.thwoo{
+  width: 200px;
+  height: 30px;
+ background-color: rgb(113, 69, 69);
+  color: #fff;
+border: none;
+}
+
+.imagetwoo{
+  margin: 50px;
 }
